<resources>
    <!-- App Resource Strings -->
    <string name="preferences_file" translatable="false">fr.asdl.paperbee</string>
    <string name="pref_app_theme_name" translatable="false">app_theme_pref</string>
    <string name="pref_app_third_party" translatable="false">app_license_pref</string>
    <string name="pref_app_version" translatable="false">app_version_pref</string>
    <string name="pref_app_version_summary" translatable="false">%1$s (%2$d)</string>
    <string name="notes_directory_name" translatable="false">notes</string>
    <string name="transition_name" translatable="false">TransitionOpenBackground</string>
    <string name="transition_name_title" translatable="false">TransitionOpenTitle</string>
    <string name="transition_name_contents" translatable="false">TransitionOpenContents</string>
    <string name="transition_name_fab" translatable="false">TransitionFloatingActionButton</string>
    <string name="transition_name_fab_1" translatable="false">TransitionFloatingActionButton1</string>
    <string name="transition_name_fab_2" translatable="false">TransitionFloatingActionButton2</string>
    <string name="transition_name_sharing_button" translatable="false">transitionShareButton</string>
    <string name="transition_folder_color" translatable="false">TransitionFolder</string>

    <!-- Translatable Strings (displayed) -->
    <string name="app_name">PaperBee</string>
    <string name="notes_root_name">Notes</string>
    <string name="loading">Loading</string>
    <string name="no_note">This folder is empty</string>
    <string name="no_note_root">There is nothing here…\nClick the + button to add something !</string>
    <string name="no_note_trash">Nothing to worry about in your trash can</string>
    <string name="delete">Delete</string>
    <string name="note_title">Title</string>
    <string name="add_text_element">Add text element</string>
    <string name="add_checkbox_element">Add checkbox element</string>
    <string name="drag_action">Drag</string>
    <string name="folder_name">Folder name</string>
    <string name="note_content">Write something</string>
    <string name="trash_can">Trash</string>
    <string name="trash_empty">Wipe trash can</string>
    <string name="trash_empty_confirm">Empty the trash ?</string>
    <string name="trash_empty_confirm_details">You will not be able to retrieve the deleted content.</string>
    <string name="trash_delete">Delete ?</string>
    <string name="trash_delete_details">Are you sure you want to delete this ? This action cannot be undone.</string>
    <string name="trash_cannot_edit">Cannot edit notes located in trash</string>
    <string name="notable_move">Move to</string>
    <string name="folder">Folder</string>
    <string name="expand">Expand</string>
    <string name="color_pick">Pick color</string>
    <string name="set_color_note">Note color</string>
    <string name="set_color_folder">Folder color</string>
    <string name="color_change_title">Choose color</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="colorRedName">Red</string>
    <string name="colorGreenName">Green</string>
    <string name="colorBlueName">Blue</string>
    <string name="colorYellowName">Yellow</string>
    <string name="colorCyanName">Cyan</string>
    <string name="colorMagentaName">Magenta</string>
    <string name="colorOrangeName">Orange</string>
    <string name="colorRoseName">Rose</string>
    <string name="movePartOut">Move out of parent</string>
    <string name="movePartIn">Make child of above</string>
    <string name="note_part_deleted">Element deleted</string>
    <string name="restore">Restore</string>
    <string name="create_folder">Create new folder</string>
    <string name="create_note">Create new note</string>
    <string name="create_element">New…</string>
    <string name="shortcutCreateLabelLong">Create a note</string>
    <string name="shortcutCreateLabelShort">New note</string>
    <string name="share">Share</string>
    <string name="share_select">Select the content you want to share</string>
    <string name="share_method_file">with a file</string>
    <string name="share_method_nfc">with nfc</string>
    <string name="share_method_header">Choose the sharing method</string>
    <string name="share_method_password">Choose a password</string>
    <string name="share_method_password_header">If you share content with a file you should add a password to protect your data if this file is exposed to any third party (eg. social networks, internet provider)</string>
    <string name="share_start">Start sharing</string>
    <string name="shared_to_file_ok">Data successfully saved to file.</string>
    <string name="shared_to_file_exception">An error occurred when saving data to file. This is most likely a bug.</string>
    <string name="share_to_file_choose">Choose file</string>
    <string name="share_to_file_failed_retry">You have to choose a valid destination to save the file</string>
    <string name="share_to_file_ready">Ready to share</string>
    <string name="share_to_file_filename">save.bee</string>
    <string name="shared_from_file_ok">Data successfully read from file</string>
    <string name="shared_from_file_exception">An error occurred when reading file contents</string>
    <string name="share_nfc_current">Decrease distance between phones until sharing has finished</string>
    <string name="share_import">Import</string>
    <string name="share_import_from_tile_header">Select a file to import</string>
    <string name="share_from_file_failed_retry">Invalid file location provided</string>
    <string name="share_from_file_failed_compat">The file is not compatible with your version of the app</string>
    <string name="share_import_destination">Choose destination</string>
    <string name="share_import_password_header">This file is protected with a password. Provide it to decrypt it</string>
    <string name="share_import_password">Enter password</string>
    <string name="share_import_wrong_password">Wrong password</string>
    <string name="share_import_required_destination">Choose a destination first</string>
    <string name="share_import_selected">Selected destination: %s</string>
    <string name="drawer_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="pref_app_theme_title">App theme</string>
    <string name="pref_app_appearance">Appearance</string>
    <string name="pref_app_category_misc">Miscellaneous</string>
    <string name="pref_app_version_title">App version</string>
    <string name="db_error_select">An error occurred while accessing your notes</string>
    <string name="db_error_insert">An error occurred while saving the note</string>
    <string name="pref_app_third_party_license">Third party licenses</string>
    <string-array name="pref_app_theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string name="unknown_license">unknown</string>
    <string name="no_data">No data</string>
    <string name="license_unknown_text">The license of this dependency has not been correctly bound. Please contact developers to fix this issue.</string>
    <string name="licensed_under">Licensed under %s License</string>
    <string name="licensed_copyright" translatable="false">© %s, %s</string>
    <string name="share_nfc_stopped">Stopped sharing. Go back to re-run.</string>
    <string name="share_nfc_current_running">Sharing data</string>
    <string name="share_nfc_current_error">An error occurred while sharing data to remote. Check phones are compatible or decrease distance between phones.</string>
    <string name="share_from_nfc_incompatible_version">Ensure the sender has the same version of the app</string>
    <string name="share_from_nfc_incompatible">Sender is not compatible with nfc sharing</string>
    <string name="format_bold">Bold</string>
    <string name="format_italic">Italic</string>
    <string name="format_underline">Underline</string>
    <string name="format_text_color">Text color</string>
    <string name="format_back_color">Highlight</string>
    <string name="format_insert_link">Link</string>
    <string name="format_insert_link_dialog_name">Edit link</string>
    <string name="format_insert_link_dialog_remove">Remove link</string>
    <string name="format_insert_link_dialog_apply">Set link</string>
    <string name="apdu_host_desc">Note sharing host</string>
    <string name="apdu_aid_desc">Note sharing</string>
</resources>
