<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/goto_main"
            android:icon="@drawable/ic_folder"
            android:orderInCategory="98"
            android:title="@string/notes_root_name"
            android:titleCondensed="@string/notes_root_name" />
        <item
            android:id="@+id/goto_trash"
            android:icon="@drawable/ic_baseline_delete"
            android:orderInCategory="99"
            android:title="@string/trash_can"
            android:titleCondensed="@string/trash_can"/>
    </group>

    <group android:id="@+id/drawer_others">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="100"
            android:title="@string/drawer_settings"
            android:titleCondensed="@string/drawer_settings" />
    </group>

</menu>