<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_import_icon"
        android:icon="@drawable/ic_import"
        android:orderInCategory="98"
        android:title="@string/share_import"
        android:titleCondensed="@string/share_import"
        app:iconTint="@color/blank"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_icon"
        android:icon="@drawable/ic_share"
        android:orderInCategory="99"
        android:title="@string/share"
        android:titleCondensed="@string/share"
        app:iconTint="@color/blank"
        app:showAsAction="always" />

    <item
        android:id="@+id/set_color"
        android:icon="@drawable/ic_color_lens"
        android:orderInCategory="90"
        android:tint="@color/blank"
        android:title="@string/set_color_folder"
        android:titleCondensed="@string/set_color_folder"
        app:iconTint="@color/blank"
        app:showAsAction="ifRoom" />

</menu>