<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/folder_root_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/folder_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semiBlank"
        android:transitionName="@string/transition_folder_color" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/folder_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/folder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/folder_name"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/folder_name"
            android:inputType="text"
            android:textColor="@color/blank"
            android:textColorHint="@color/blankHint"
            android:textSize="@dimen/appBarTextSize" />

    </androidx.appcompat.widget.Toolbar>

    <fr.asdl.paperbee.view.sentient.SentientRecyclerView
        android:id="@+id/notes_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fadeScrollbars="true"
        android:nestedScrollingEnabled="true"
        android:paddingTop="@dimen/padding_tiny"
        android:paddingBottom="@dimen/padding_tiny"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:transitionGroup="true"
        app:allowSwipe="left|right"
        app:emptyView="@+id/no_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_toolbar"
        app:leftUnderSwipeableView="@+id/note_background_move"
        app:rightUnderSwipeableView="@+id/note_background_delete"
        app:swipeableView="@+id/note_element" />

    <TextView
        android:id="@+id/no_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/folder_toolbar" />

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_folder_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/add_note_selector"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/fab_mini_margin"
            android:layout_marginEnd="@dimen/fab_mini_margin"
            android:layout_marginBottom="@dimen/padding_small"
            android:contentDescription="@string/create_folder"
            android:transitionName="@string/transition_name_fab_2"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabCustomSize="@dimen/fab_mini_size"
            app:rippleColor="@color/blank"
            app:srcCompat="@drawable/ic_create_new_folder"
            app:tint="@color/blank" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/add_note_button"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/fab_mini_margin"
            android:layout_marginEnd="@dimen/fab_mini_margin"
            android:layout_marginBottom="@dimen/padding_small"
            android:contentDescription="@string/create_note"
            android:transitionName="@string/transition_name_fab_1"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabCustomSize="@dimen/fab_mini_size"
            app:rippleColor="@color/blank"
            app:srcCompat="@drawable/ic_note_add"
            app:tint="@color/blank" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:contentDescription="@string/create_element"
            android:transitionName="@string/transition_name_fab"
            app:backgroundTint="@color/colorAccent"
            app:rippleColor="@color/blank"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/blank" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>