<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/transitionBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blank"
        android:transitionName="@string/transition_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/transitionContents"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fr.asdl.paperbee.view.ActionToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/note_editor_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/note_title"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_title"
                    android:inputType="text"
                    android:transitionName="@string/transition_name_title" />

            </fr.asdl.paperbee.view.ActionToolbar>

            <LinearLayout
                android:id="@+id/editor_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <fr.asdl.paperbee.view.sentient.SentientRecyclerView
                android:id="@+id/note_editor_elements"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:overScrollMode="ifContentScrolls"
                android:padding="@dimen/padding_small"
                android:scrollbarThumbVertical="@null"
                android:transitionName="@string/transition_name_contents"
                app:allowSwipe="right"
                app:layout_constraintBottom_toTopOf="@+id/editor_format_toolbar"
                app:layout_constraintTop_toBottomOf="@id/editor_toolbar" />

            <LinearLayout
                android:id="@+id/editor_format_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>